src/test/deca/context/invalid/provided/affect-incompatible.deca
// Description:
//    Affectation et typage
// Resultats:
//    affect-incompatible.deca:12:7: Error: Illegal RValue type, got boolean, expected int


{
   int a;
   boolean b;

   // Doit etre refuse.
   a = b;
}
